--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ span {
   #hello .background {
     background: 50% 50% / cover;
     background-attachment: fixed;
-    background-color: #ABB3B6;
+    background-color: ;
     background-image: url("Trying/img/sky.jpg");
     background-position: center center;
     height: 100%; }
