--- a/css/main.css
+++ b/css/main.css
@@ -86,8 +86,8 @@ span {
     background: 50% 50% / cover;
     background-attachment: fixed;
     background-color: #FCD5CE ;
-    background-image: url("Trying/img/sky.jpg");
-    background-position: ;
+    background-image: ("Trying/img/sky.jpg");
+    background-position: center center ;
     height: 100%; }
 
 #bio {
