--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ span {
     background: 50% 50% / cover;
     background-attachment: fixed;
     background-color: #FCD5CE ;
-    background-image: ("Trying/img/sky.jpg");
+    background-image: url("https://github.com/melaniet03/Trying/blob/gh-pages/img/sky.jpg");
     background-position: center center ;
     height: 100%; }
 
