--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ span {
     background: 50% 50% / cover;
     background-attachment: fixed;
     background-color: #FCD5CE ;
-    background-image: url('..:img:sky-background.jpg').jpg
+    background-image: url('..:img:sky-background.jpg');
     background-position: center center ;
     height: 100%; }
 
