--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,7 @@ span {
     -webkit-transform: translate3d(0, 100%, 0); }
 
 #quote {
+  font-family: fantasy;
   padding: 0 10% 13% 10%;
   font-size: 60px;
   font-weight: 700;
