--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,10 @@ h1 {
   text-align: center;
   text-transform: uppercase;
   width: 100%; }
+h2 {
+   color: #83C5BE;
+   font-size: 50px;
+   font-family: monospace; }
 
 span {
   color: #BDB2FF; }
