--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ h1 {
   width: 100%; }
 
 span {
-  color: #BDB2FF; }
+  color: #00BBF9; }
 
 /* ==========================================================================
    Parallax
