--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,11 @@ h1 {
 span {
   color: #00BBF9; }
 
+canvas {
+    width: 500px;
+    height: 500px;
+    background-color: #0D0909; }
+
 /* ==========================================================================
    Parallax
    ========================================================================== */
